--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 /__pycache__
 /venv
 /stockfish
-get_platform.py
+backend/engine/get_platform.py
 /backend/engine/__pycache__
+package-lock.json
+/frontend
