--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,14 @@
+altgraph==0.17.4
+blinker==1.9.0
 chess==1.11.2
+click==8.2.1
 Flask==3.1.1
 flask-cors==6.0.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+packaging==25.0
+pygame==2.6.1
+pyinstaller==6.14.0
+pyinstaller-hooks-contrib==2025.4
+Werkzeug==3.1.3
